--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<br>
 
 		<!-- Image -->
-		<a href="sample.jpg">
+		<a href="images/sample.jpg">
 			<img src="sample.jpg" alt="My Sample Image" width="200">
 		</a>
 
